# engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
engine/: Cargo.toml
engine/proto/: engine.proto
engine/src/: cluster_client.rs  lib.rs  proto.rs  proxy_config.rs  routing.rs  task_id.rs
engine/src/service/: backend.rs  mod.rs  proxy.rs
engine/tests/: proxy_cluster.rs
engine/tests/common/: mod.rs
enginelib/: Cargo.toml
enginelib/macros/: Cargo.toml
enginelib/macros/src/: lib.rs
enginelib/src/: api.rs  config.rs  event.rs  lib.rs  plugin.rs  prelude.rs  task.rs
enginelib/src/events/: admin_auth_event.rs  auth_event.rs  before_task_acquire_event.rs  before_task_execute_event.rs  before_task_publish_event.rs  cgrpc_event.rs  client_auth_prepare_event.rs  client_start_event.rs  mod.rs  server_before_task_acquire_event.rs  server_before_task_create_event.rs  server_before_task_publish_event.rs  server_start_event.rs  server_task_acquired_event.rs  server_task_created_event.rs  server_task_published_event.rs  start_event.rs  task_acquired_event.rs
enginelib/tests/: event_tests.rs
rfc/: rfc1000.md  rfc1000.md.backup  rfc1001.md  rfc1002.md  rfc1003.md  rfc1004.md  rfc1005.md
