[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
description = "A Blazingly fast distributed task system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dev = []
[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"
# directories = "5.0.1"
druid = { git = "https://github.com/GrandEngineering/druid.git" }
enginelib = { path = "../enginelib" }
# libloading = "0.8.6"
prost = "0.14"
rand = "0.8.5"
serde = { workspace = true }
# serde = "1.0.219"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
toml = { workspace = true }
# toml = "0.8.19"
tonic = "0.14"
tonic-prost = "0.14.5"
tracing = "0.1.44"

tonic-reflection = "0.14"
[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
